fix spacing

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,5 +1,5 @@
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
-$tablet-spacing: 5vw;
-$desktop-spacing: 10vw
+$tablet-spacing: 1rem;
+$desktop-spacing: 3rem;
