--- a/styles/show.scss
+++ b/styles/show.scss
@@ -4,6 +4,8 @@
 @use "./partials/mixins" as *;
 
 .hero {
+  background-image: url("../assets/images/hero-shows.jpg");
+
   &__sound-wrapper {
     display: flex;
     flex-direction: column;
@@ -27,11 +29,19 @@
     @include tablet {
       font-size: 2.5rem;
     }
+    @include desktop {
+      width: 50%;
+      font-size: 3rem;
+      font-weight: 600;
+    }
   }
 
   h3 {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-weight: normal;
+    @include tablet {
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -60,12 +70,18 @@ th {
 
 .hero {
   padding: 1rem;
+  @include desktop {
+    padding: 1rem 3rem;
+  }
 }
 
 section {
   padding: 1rem 0;
   @include tablet {
     padding: 1rem;
+  }
+  @include desktop {
+    padding: 1rem 3rem;
   }
 }
 
@@ -140,6 +156,10 @@ section {
 
   &__item-label {
     color: $silver;
+  }
+
+  &__item-value {
+    font-weight: 600;
   }
 
   &__item-label, &__item-value {
